# rustracer

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md  cachegrind.out.31522  perf.data  perf.data.old  perf.hist.2
report/: Makefile  perf.data  perf.data.old  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex
shaders/: mandelbrot.comp.glsl  quad.glsl.frag  quad.glsl.vert  texture.frag.glsl  texture.vert.glsl  tracer.comp.glsl  tracer.glsl.comp
shaders/wavefront/: connect.glsl.comp  extend.glsl.comp  generate.glsl.comp  shade.glsl.comp
src/: compute.rs  graphics.rs  main.rs  main.rs.bak  renderer.rs  scene.rs  shaders.rs  tracer.rs  types.rs
src/shaders/: mandelbrot.rs  mod.rs  plane.rs  tracer.rs
src/tracer/: camera.rs  mod.rs  morton.rs  primitive.rs  ray.rs  scene.rs
src/tracer/material/: mod.rs
src/tracer/mesh/: mod.rs
src/tracer/primitive/: mod.rs  plane.rs  sphere.rs  triangle.rs
src/vec/: mod.rs
