[package]
name = "testit"
version = "0.1.0"
authors = ["Arian van Putten <aeroboy94@gmail.com>"]

[dependencies]
vulkano = "0.7"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
winit = "0.7"
image = "*"
nalgebra = "*"
simd = "*"
half = "*"
tobj = "*"
scoped_threadpool = "*"
morton = "*"
stdsimd = "*"
rand = "*"

[dependencies.bvh]
path = "../bvh"

[profile.release]
debug = true
opt-level = 3

