[package]
name = "testit"
version = "0.1.0"
authors = ["Arian van Putten <aeroboy94@gmail.com>"]

[dependencies]
fps_counter = "1.0"
vulkano = "0.7"
vulkano-shader-derive = "0.7"
vulkano-win = "0.7"
winit = "0.7"
nalgebra = "0.12.1"
tobj = "*"

[dependencies.bvh]
path = "../bvh"

[profile.release]
debug = true
opt-level = 3
lto = true

